--- a/style.css
+++ b/style.css
@@ -189,13 +189,14 @@ body{
 
 }
 .seekbar{
-    height: 2px;
+    height: 4px;
     width: 98%;
     background: black;
     border-radius: 10px;
     position: absolute;
     bottom: 0; 
     margin: 6px;
+    cursor: pointer;
 }
 .circle{
     width: 15px;
