--- a/style.css
+++ b/style.css
@@ -12,9 +12,6 @@ body{
     width: 25vw;
     padding: 10px;
 }
-.right{
-    width: 75vw;
-}
 .home ul li{
     display: flex;
     width: 15px;
@@ -52,6 +49,7 @@ body{
     color: grey;
 }
 .right{
+    width: 75vw;
     margin: 16px 0;
     position: relative;
 }
@@ -154,6 +152,15 @@ body{
 .songbuttons img{
     cursor: pointer;
 }
+.hamburger{
+    display: none;
+}
+.hamburgerContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 14px;
+}
 .songList{
     height: 540px;
     overflow: auto;
@@ -215,4 +222,23 @@ body{
 .abovebar{
     display: flex;
     justify-content: space-between;
+}
+@media screen and (max-width: 1400px) {
+    .left{
+        position: absolute;
+        left: -100%;
+        transition: all  .3s;
+        z-index: 1;
+        width: 433px;
+        background-color: black;
+    }
+    .right{
+        width: 100vw;
+    }
+    .playbar{
+        width: 95vw;
+    }
+    .hamburger{
+        display: block;
+    }
 }
