--- a/style.css
+++ b/style.css
@@ -1,244 +1,261 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    font-family: "Roboto", sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
 }
-body{
-    background-color: black;
-    color: white;
+body {
+  background-color: black;
+  color: white;
 }
-.left{
-    width: 25vw;
-    padding: 10px;
+.left {
+  width: 25vw;
+  padding: 10px;
 }
-.home ul li{
-    display: flex;
-    width: 15px;
-    display: flex;
-    gap: 10px;
-    list-style: none;
-    padding-top: 14px;
-    /* font-weight: bold; */
+.home ul li {
+  display: flex;
+  width: 15px;
+  display: flex;
+  gap: 10px;
+  list-style: none;
+  padding-top: 14px;
+  /* font-weight: bold; */
 }
-.heading{
-    display: flex;
-    gap: 15px;
-    width: 100%;
-    padding-top: 14px;
-    padding: 20px 0px;
-    /* font-weight: bold; */
-    align-items: center;
-    font-size: 12px;
+.heading {
+  display: flex;
+  gap: 15px;
+  width: 100%;
+  padding-top: 14px;
+  padding: 20px 0px;
+  /* font-weight: bold; */
+  align-items: center;
+  font-size: 12px;
 }
-.heading img{
-    width: 30px;
+.heading img {
+  width: 30px;
 }
-.library{
-    min-height: 80vh;
-    position: relative;
+.library {
+  min-height: 80vh;
+  position: relative;
 }
-.footer{
-    display: flex;
-    font-size: 10px;
-    gap: 13px;
-    position: absolute;
-    bottom: 0;   
+.footer {
+  display: flex;
+  font-size: 10px;
+  gap: 13px;
+  position: absolute;
+  bottom: 0;
 }
-.footer a{
-    color: grey;
+.footer a {
+  color: grey;
 }
-.right{
-    width: 75vw;
-    margin: 16px 0;
-    position: relative;
+.right {
+  width: 75vw;
+  margin: 16px 0;
+  position: relative;
 }
-.header{
-    display: flex;
-    justify-content: space-between;
-    background-color: #1f1f1f
+.header {
+  display: flex;
+  justify-content: space-between;
+  background-color: #1f1f1f;
 }
-.header > *{
-    padding: 20px;
+.header > * {
+  padding: 20px;
 }
-.spotifyPlaylists{
-    padding: 16px;
+.spotifyPlaylists {
+  padding: 16px;
 }
-.cardContainer{
-    margin: 30px;
-    display: flex;
-    gap: 10px;
-    flex-wrap: wrap;
-    overflow-y: scroll;
-    max-height: 70vh;
+.cardContainer {
+  margin: 30px;
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+  overflow-y: auto;
+  max-height: 70vh;
 }
-.card{
-    width: 200px;
-    padding: 10px;
-    border-radius: 5px;
-    background-color: #252525;
-    position: relative;
+.card {
+  width: 200px;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: #252525;
+  position: relative;
 }
-.card > *{
-    padding-top: 10px;
+.card > * {
+  padding-top: 10px;
 }
-.card img{
-    width: 100%;
-    object-fit: contain;
+.card img {
+  width: 100%;
+  object-fit: contain;
 }
-.play{
-    width: 28px;
-    height: 28px;
-    background-color: #1fdf64;
-    border-radius: 50%;
-    padding: 4px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-    top: 168px;
-    right: 17px;
-    opacity: 1;
-    transition: all 1s ease-out;
+.play {
+  width: 28px;
+  height: 28px;
+  background-color: #1fdf64;
+  border-radius: 50%;
+  padding: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 168px;
+  right: 17px;
+  opacity: 1;
+  transition: all 1s ease-out;
 }
-.buttons{
-    display: flex;
-    gap: 35px;
+.buttons {
+  display: flex;
+  gap: 35px;
 }
 .button > * {
-    margin: 0px 12px;
+  margin: 0px 12px;
 }
-.signupbtn{
-    background-color: rgb(34, 34, 34);
-    color: rgb(156, 148, 148);
-    font-weight: bold;
-    border: none;
-    outline: none;
-    font-size: 16px;
-    cursor: pointer;
+.signupbtn {
+  background-color: rgb(34, 34, 34);
+  color: rgb(156, 148, 148);
+  font-weight: bold;
+  border: none;
+  outline: none;
+  font-size: 16px;
+  cursor: pointer;
 }
-.signupbtn:hover{
-    font-size: 17px;
-    color: white;
+.signupbtn:hover {
+  font-size: 17px;
+  color: white;
 }
-.loginbtn{
-    background-color: white;
-    border-radius: 45px;
-    color: black;
-    padding: 15px;
-    width: 100px;
-    font-size: 16px;
-    cursor: pointer;
+.loginbtn {
+  background-color: white;
+  border-radius: 45px;
+  color: black;
+  padding: 15px;
+  width: 100px;
+  font-size: 16px;
+  cursor: pointer;
 }
-.loginbtn:hover{
-    font-weight: bold;
-    font-size: 17px;
+.loginbtn:hover {
+  font-weight: bold;
+  font-size: 17px;
 }
-.playbar{
-    position: fixed;
-    bottom: 40px;
-    background: #dad5d5;
-    filter: invert(1);
-    height: 40px;
-    width: 70vw;
-    padding: 12px;
-    border-radius: 15px;
+.playbar {
+  position: fixed;
+  bottom: 40px;
+  background: #dad5d5;
+  filter: invert(1);
+  min-height: 40px;
+  width: 70vw;
+  padding: 12px;
+  border-radius: 15px;
 }
-.songbuttons{
-    display: flex;
-    justify-content: center;
-    gap: 16px;
+.songbuttons {
+  display: flex;
+  justify-content: center;
+  gap: 16px;
 }
-.songbuttons img{
-    cursor: pointer;
+.songbuttons img {
+  cursor: pointer;
 }
-.hamburger{
-    display: none;
+.hamburger {
+  display: none;
 }
-.hamburgerContainer{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 14px;
+.hamburgerContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 14px;
 }
-.songList{
-    height: 540px;
-    overflow: auto;
-    margin-bottom: 44px;
+.songList {
+  height: 540px;
+  overflow: auto;
+  margin-bottom: 44px;
 }
-.songList ul{
-    padding: 0 12px;
+.songList ul {
+  padding: 0 12px;
 }
-.songList ul li{
-    list-style-type: decimal;
-    display: flex;
-    justify-content: space-between;
-    gap: 12px;
-    padding: 12px 0;
-    cursor: pointer;
-    border: 1px solid white;
-    margin: 12px 0;
-    padding: 13px;
-    border-radius: 5px;
+.songList ul li {
+  list-style-type: decimal;
+  display: flex;
+  justify-content: space-between;
+  gap: 12px;
+  padding: 12px 0;
+  cursor: pointer;
+  border: 1px solid white;
+  margin: 12px 0;
+  padding: 13px;
+  border-radius: 5px;
 }
-.songList .info{
-    font-size: 13px;
-    width: 344px;
+.songList .info {
+  font-size: 13px;
+  width: 344px;
 }
-.playnow{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.playnow {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.playnow span{
-    font-size: 15px;
-    width: 64px;
-
+.playnow span {
+  font-size: 15px;
+  width: 64px;
 }
-.seekbar{
-    height: 4px;
-    width: 98%;
-    background: black;
-    border-radius: 10px;
-    position: absolute;
-    bottom: 0; 
-    margin: 6px;
-    cursor: pointer;
+.seekbar {
+  height: 4px;
+  width: 98%;
+  background: black;
+  border-radius: 10px;
+  position: absolute;
+  bottom: 0;
+  margin: 6px;
+  cursor: pointer;
 }
-.circle{
-    width: 15px;
-    height: 15px;
-    border-radius: 13px;
-    background-color: black;
-    position: relative;
-    bottom: 6.5px;
-    left: 0px;
-    transition: left 0.5s;
+.circle {
+  width: 15px;
+  height: 15px;
+  border-radius: 13px;
+  background-color: black;
+  position: relative;
+  bottom: 6.5px;
+  left: 0px;
+  transition: left 0.5s;
 }
-.songinfo, .songtime{
-    color: black;
-    padding: 0 12px;
+.songinfo,
+.songtime {
+  color: black;
+  padding: 0 12px;
 }
-.abovebar{
-    display: flex;
-    justify-content: space-between;
+.abovebar {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 0;
 }
 @media screen and (max-width: 1400px) {
-    .left{
-        position: absolute;
-        left: -100%;
-        transition: all  .3s;
-        z-index: 1;
-        width: 433px;
-        background-color: black;
-    }
-    .right{
-        width: 100vw;
-    }
-    .playbar{
-        width: 95vw;
-    }
-    .hamburger{
-        display: block;
-    }
+  .left {
+    position: absolute;
+    left: -120%;
+    transition: all 0.3s;
+    z-index: 1;
+    width: 363px;
+    background-color: black;
+  }
+  .left .close {
+    position: absolute;
+    right: 31px;
+    top: 25px;
+    width: 29px;
+  }
+  .right {
+    width: 100vw;
+  }
+  .playbar {
+    width: calc(100vw - 60px);
+  }
+  .seekbar{
+    width: calc(100vw - 70px);
+  }
+  .hamburger {
+    display: block;
+  }
+  .card{
+    width: 90vw;
+  }
+  .cardContainer{
+    margin: 0;
+    justify-content: center;
+  }
 }
