--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+:root{
+  --a:0;
+}
 * {
   margin: 0;
   padding: 0;
@@ -8,7 +11,7 @@ body {
   background-color: black;
   color: white;
 }
-.close{
+.close {
   display: none;
 }
 .left {
@@ -67,7 +70,7 @@ body {
 .spotifyPlaylists {
   padding: 16px;
 }
-.spotifyPlaylists h1{
+.spotifyPlaylists h1 {
   padding: 16px;
 }
 .cardContainer {
@@ -84,6 +87,12 @@ body {
   border-radius: 5px;
   background-color: #252525;
   position: relative;
+  transition: all 0.5s;
+}
+.card:hover{
+  background-color: rgb(54, 54, 54);
+  cursor: pointer;
+  --a: 1;
 }
 .card > * {
   padding-top: 10px;
@@ -104,7 +113,7 @@ body {
   position: absolute;
   top: 168px;
   right: 17px;
-  opacity: 1;
+  opacity: var(--a);
   transition: all 1s ease-out;
 }
 .buttons {
@@ -191,6 +200,9 @@ body {
   font-size: 13px;
   width: 344px;
 }
+/* .info div{
+  word-break: break-all;
+} */
 .playnow {
   display: flex;
   justify-content: center;
@@ -220,17 +232,32 @@ body {
   left: 0px;
   transition: left 0.5s;
 }
-.songinfo,
+.timevol {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.songinfo {
+  color: black;
+  padding: 0 12px;
+  width: 250px;
+}
 .songtime {
   color: black;
   padding: 0 12px;
+  width: 125px;
+}
+.volume {
+  display: flex;
+  align-items: center;
+  gap: 12px;
 }
 .abovebar {
   display: flex;
   justify-content: space-between;
   margin: 20px 0;
 }
-@media screen and (max-width: 1400px) {
+@media screen and (max-width: 1250px) {
   .left {
     position: absolute;
     left: -120%;
@@ -238,12 +265,24 @@ body {
     z-index: 1;
     width: 363px;
     background-color: black;
+    padding: 0;
+  }
+  .songinfo,
+  .songtime {
+    width: auto;
   }
   .left .close {
     position: absolute;
     right: 31px;
     top: 25px;
     width: 29px;
+  }
+  .timevol{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    gap: 13px;
   }
   .right {
     margin: 0px;
@@ -252,25 +291,30 @@ body {
   .playbar {
     width: calc(100vw - 75px);
   }
-  .seekbar{
+  .seekbar {
     width: calc(100vw - 120px);
   }
   .hamburger {
     display: block;
   }
-  .card{
-    width: 90vw;
+  .card {
+    width: 45vw;
   }
-  .cardContainer{
+  .cardContainer {
     margin: 0;
     justify-content: center;
   }
-  .close{
+  .close {
     display: block;
   }
-  .abovebar{
+  .abovebar {
     flex-direction: column;
     gap: 23px;
     align-items: center;
+  }
+}
+@media screen and (max-width: 400px) {
+  .card {
+    width: 84vw;
   }
 }
