--- a/style.css
+++ b/style.css
@@ -251,6 +251,10 @@ body {
   display: flex;
   align-items: center;
   gap: 12px;
+  cursor: pointer;
+}
+.range input{
+  cursor: pointer;
 }
 .abovebar {
   display: flex;
