--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-:root{
-  --a:0;
+:root {
+  --a: 0;
 }
 * {
   margin: 0;
@@ -21,7 +21,6 @@ body {
 .home ul li {
   display: flex;
   width: 15px;
-  display: flex;
   gap: 10px;
   list-style: none;
   padding-top: 14px;
@@ -45,14 +44,23 @@ body {
   position: relative;
 }
 .footer {
-  display: flex;
-  font-size: 10px;
-  gap: 13px;
-  position: absolute;
-  bottom: 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  margin-top: 160px;
+  margin-left: 20px;
+  font-size: 14px;
+  gap: 14px;
 }
+
 .footer a {
   color: grey;
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+.footer a:hover{
+  color: #fff;
+  text-decoration: underline;
+
 }
 .right {
   width: 75vw;
@@ -79,7 +87,7 @@ body {
   gap: 10px;
   flex-wrap: wrap;
   overflow-y: auto;
-  max-height: 70vh;
+  max-height: 58vh;
 }
 .card {
   width: 200px;
@@ -89,7 +97,7 @@ body {
   position: relative;
   transition: all 0.5s;
 }
-.card:hover{
+.card:hover {
   background-color: rgb(54, 54, 54);
   cursor: pointer;
   --a: 1;
@@ -111,8 +119,8 @@ body {
   align-items: center;
   justify-content: center;
   position: absolute;
-  top: 168px;
-  right: 17px;
+  bottom: 100px;
+  right: 30px;
   opacity: var(--a);
   transition: all 1s ease-out;
 }
@@ -169,6 +177,7 @@ body {
 }
 .hamburger {
   display: none;
+  cursor: pointer;
 }
 .hamburgerContainer {
   display: flex;
@@ -177,7 +186,7 @@ body {
   gap: 14px;
 }
 .songList {
-  height: 540px;
+  height: 440px;
   overflow: auto;
   margin-bottom: 44px;
 }
@@ -218,7 +227,7 @@ body {
   background: black;
   border-radius: 10px;
   position: absolute;
-  bottom: 0;
+  bottom: 8px;
   margin: 6px;
   cursor: pointer;
 }
@@ -253,7 +262,7 @@ body {
   gap: 12px;
   cursor: pointer;
 }
-.range input{
+.range input {
   cursor: pointer;
 }
 .abovebar {
@@ -261,15 +270,18 @@ body {
   justify-content: space-between;
   margin: 20px 0;
 }
-@media screen and (max-width: 1250px) {
+@media screen and (max-width: 1200px) {
   .left {
     position: absolute;
-    left: -120%;
+    left: -130%;
     transition: all 0.3s;
     z-index: 1;
     width: 363px;
     background-color: black;
     padding: 0;
+    height: 100vh;
+    position: fixed;
+    top: 0;
   }
   .songinfo,
   .songtime {
@@ -281,7 +293,7 @@ body {
     top: 25px;
     width: 29px;
   }
-  .timevol{
+  .timevol {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -294,6 +306,10 @@ body {
   }
   .playbar {
     width: calc(100vw - 75px);
+    right: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   .seekbar {
     width: calc(100vw - 120px);
@@ -302,7 +318,7 @@ body {
     display: block;
   }
   .card {
-    width: 45vw;
+    width: 55vw;
   }
   .cardContainer {
     margin: 0;
@@ -316,9 +332,32 @@ body {
     gap: 23px;
     align-items: center;
   }
+  .cardContainer {
+    max-height: unset;
+    overflow-y: unset;
+    margin-bottom: 30vh;
+  }
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 500px) {
   .card {
-    width: 84vw;
+    width: 100%;
+  }
+  .header > * {
+    padding: 2px;
+  }
+  .header {
+    padding: 7px;
+  }
+  .buttons > * {
+    margin: 0 6px;
+  }
+  .spotifyPlaylists h1 {
+    padding: 4px;
+  }
+  .library{
+    height: 85vh;
+  }
+  .left{
+    width: 100vw;
   }
 }
